test/parser/top_level.dmz
// RUN: compiler %s -ast-dump 2>&1 | filecheck %s

// CHECK: [[# @LINE + 1 ]]:1: error: expected declaration
while 0 {}
